[package]
name = "hash-storage-wasm"
version = "0.3.0"
authors = ["Alexander <mail@fomalhaut.su>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
rand = { version = "0.7", features = ["wasm-bindgen"] }
sha2 = "0.8"
wasm-bindgen = "0.2"
bigi = { git = "https://github.com/fomalhaut88/bigi.git", tag = "v0.4.0" }
bigi-ecc = { git = "https://github.com/fomalhaut88/bigi-ecc.git", tag = "v0.4.0" }
